2.1-beta 10
===========
- added sizeof("data format") to return the size (in bytes) of the
  data structure represented by the specified format string. 

2.1-beta 9  (6 Nov 06)
===========
- made sleep data structures and sleepclosure all serializable.
- added &readObject([$handle]) and &writeObject([$handle], $object) to
  read/write scalars to a handle.   if you think about what is possible
  with closures/coroutines and friends then you are thinking right.  this
  should scare you.
- fixed a nasty nasty (x 1000) performance issue with hashes and arrays of
  any significant size.  A null check in the Index operator was inadvertently
  converting the entire data structure to a string each time an index op
  occured.  thanks to Marty for making me aware of this one.
- added &consume($handle, n bytes) to read and discard up to n bytes from the 
  specified handle.  (differs from skip which just seeks ahead and discards
  n bytes).
- IO errors in read/write functions now uniformly close the read/write 
  portions of the IO handle.
- remove &getFilePath as the function essentially did nothing but return
  the value passed to it (I was a little over-ambitious when bridging
  java.io.File awhile back).
- ls() with no parameters now returns the listing of files/dirs in the
  current directory.
- fixed a bug with 'x' crashing the sleep console when the expression 
  had a syntax error.
- added a -c/--check option to the sleep interpreter to specify the script
  should be parsed and checked for syntax errors but not run.
- &add now behaves as documented, if no index is specified then the value
  is added to the beginning of the array (and not the end as in push).
- HOES method resolution now matches 1 character sleep strings as Java 
  characters.
- the index operator now normalizes negative array indices i.e. @array[-1]
  will return the last element of @array.
- added more descriptive error messages for out of bounds exceptions and
  null pointer exceptions.