@@ -1,0 +1,3 @@
+%(x => %(y => %(z => 'hello world!')))
+%(x => %(y => '%(z => 'hello world!')oops!'))
+Warning: invalid use of index operator: '%(z => 'hello world!')oops!'['z'] at line 11
